feat: CRUD completo para preinscripciones  udistrital/sga_documentacion#346
